--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,54 @@ body {
   background-color: var(--background);
   color: #fff;
 }
+
+.main-container {
+  margin-top: 100px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+input {
+  margin-bottom: 20px;
+  width: 300px;
+  height: 30px;
+  padding: 10px 30px;
+}
+
+input:focus {
+  outline: none;
+  border: none;
+  box-shadow: 0 20px 30px rgb(255, 255, 255, 0.1);
+  transform: scale(1.03);
+}
+
+.btn-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+button {
+  border: none;
+  outline: none;
+  color: #fff;
+  padding: 10px 20px;
+  margin-left: 20px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.submit-btn {
+  background-color: var(--background);
+}
+
+.reset-btn {
+  background-color: var(--component-sub);
+}
