--- a/frontend/src/components/Register/register.styles.css
+++ b/frontend/src/components/Register/register.styles.css
@@ -1,4 +1,4 @@
-.register-box {
+.form-box {
   max-width: 30%;
   height: auto;
   padding: 50px 100px;
@@ -9,7 +9,7 @@
   justify-content: center;
 }
 
-.register-title {
+.form-title {
   border-bottom: 3px solid #fff;
   padding-bottom: 10px;
 }
